did base settings

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,13 +1,13 @@
 extends ../_template
 
 block variables
-  - var title       = 'Odinokun`s start template'
-  - var description = 'Odinokun`s start template'
-  - var ogtitle     = 'Odinokun`s start template'
+  - var title       = 'Master Vision'
+  - var description = 'Master Vision'
+  - var ogtitle     = 'Master Vision'
   - var ogimage     = 'assets/img/social.jpg'
 
 block content
-  .main-wrap.no-js.index
+  .main-wrap.index
     include ../sections/header
 
     //begin content
