--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -25,12 +25,18 @@ html(lang="ru")
     link(rel='apple-touch-icon' sizes='180x180'     href='img/favicon/apple-touch-icon-180x180.png')
     // end favicon block end
 
+    //begin fonts
+    link(href="https://fonts.googleapis.com/css?family=Montserrat:600%7CRoboto:300,300i,400,500,700&display=swap&subset=cyrillic" rel="stylesheet")
+
+    //end fonts
+
+
     link(rel='stylesheet' href='assets/css/foundation.css')
     link(rel='stylesheet' href='assets/css/app.css')
     link(rel='stylesheet' href='assets/css/uncompressed.css')
 
     // begin custom browsers color
-    //meta(name='theme-color', content='#000')
+    meta(name='theme-color', content='#4d4ce0')
     // end custom browsers color
 
     //[if lt IE 9]><script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]
