--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -13,7 +13,7 @@ body {
 
 html {
   font-family: $font;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.38;
   color: $text;
 }
@@ -29,55 +29,48 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
-  font-weight: 400;
+h6 {
+  font-weight: 700;
   margin: 0 0 10px 0;
 }
 
 h1 {
-  font-family: $font-bold;
   font-size: 36px;
 }
 
 h2 {
-  font-family: $font-bold;
   font-size: 32px;
 }
 
 h3 {
-  font-family: $font-bold;
   font-size: 28px;
 }
 
 h4 {
-  font-family: $font-bold;
   font-size: 24px;
 }
 
 h5 {
-  font-family: $font-bold;
   font-size: 22px;
 }
 
 h6 {
-  font-family: $font-bold;
   font-size: 20px;
 }
 
 p {
-  font-size: 16px;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 23px;
   strong {
-    font-family: $font-bold;
+    font-weight: 700;
   }
 }
 
 a {
-  transition: color .5s;
-  color: $highlight;
+  color: $highlight-r;
   &:hover {
     text-decoration: none;
-    color: $highlight-hov;
   }
 }
 
@@ -136,16 +129,19 @@ svg {
   overflow: visible;
 }
 
-// подсвечиваем картинки без заполненного alt
+// подсвечиваем картинки без alt
+// и без заполненного alt
 img[alt=''],
-img[alt=""]{
-  outline: 5px solid darkorange;
+img:not([alt]) {
+  outline: 5px solid tomato;
 }
 
-// подсвечиваем теги без необходимых атрибутов
-img:not([alt]),
-input[type=submit]:not([value]) {
-  outline: 5px solid tomato;
+// исключение для google-map и fancybox
+.fancybox-container img[alt=''],
+.fancybox-container img:not([alt]),
+.gm-style img[alt=''],
+.gm-style img:not([alt]) {
+  outline: none !important;
 }
 
 // тревога, если первый child внутри списка не li и прочие похожие примеры
@@ -166,6 +162,7 @@ ol > *:not(li) {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+
   //свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
@@ -181,31 +178,7 @@ ol > *:not(li) {
 .container {
   position: relative;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
-  padding: 15px 30px;
-
-  @include max(768) {
-    padding: 10px 20px;
-  }
-  @include max(425) {
-    padding: 10px;
-  }
-}
-
-// скрываем все слайды кроме первого
-// при отключенном JS
-// .slick-slide исправить на текущий класс
-.no-js .slick-slide:not(:first-child) {
-  display: none;
-}
-
-// скрываем слайдер до его инициализации
-// .card-slider-lg__list исправить на текущий класс
-.card-slider-lg__list {
-  visibility: hidden;
-}
-
-.card-slider-lg__list.slick-initialized {
-  visibility: visible;
+  padding: 0 55px;
 }
