--- a/src/style/core/_variables.scss
+++ b/src/style/core/_variables.scss
@@ -1,20 +1,18 @@
 // ***** main colors *******
-$brand: #00407a;
+$brand: #4d4ce0;
+$gradient: linear-gradient(to right, #4d4ce0 0%, #5f64d6 100%);
+
 $dark: #181a19;
 $light: #f5f5f5;
 
-$highlight: #f6882b;
-$highlight-hov: #f2a621;
+$highlight-v: #4d4ce0;
+$highlight-r: #fc4c3b;
 
 // ***** text colors *******
 $text: #646464;
 $title: #141414;
 
 // ===== fonts =====
-$font:            'OpenSans', sans-serif;
-$font-bold:       'OpenSans-Bold', sans-serif;
-$font-light:      'OpenSans-Light', sans-serif;
-$font-semibold:   'OpenSans-Semibold', sans-serif;
 
-// ===== sizes =====
-$radius-btn: 6px;
+$font:        'Roboto', sans-serif;
+$font-title:  'Montserrat', sans-serif;
