did footer-bottom

--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,4 +1,14 @@
 //begin footer
-footer.footer(style='background-color:#167;color:#fff;text-align:center;text-transform:uppercase;')
-  h1 footer
+footer.footer
+    .container.footer-top
+      .footer-top__item
+
+    .container.footer-bottom
+      .footer-bottom__copyright
+        span.footer-bottom__copyright-text Все права защищены. Mastervision © 2019
+      .footer-bottom__offer
+        a(href="#").footer-bottom__offer-link Договор Оферты
+      .footer-bottom__privacy
+        a(href="#").footer-bottom__privacy-link Политика конфиденциальности
+
 //end footer
