--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -166,6 +166,7 @@ ol > *:not(li) {
   //свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
+
   &.no-scroll {
     overflow: hidden;
   }
@@ -181,4 +182,16 @@ ol > *:not(li) {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 55px;
+
+  @include max(1024) {
+    padding: 0 30px;
+  }
+
+  @include max(768) {
+    padding: 0 20px;
+  }
+
+  @include max(425) {
+    padding: 0 10px;
+  }
 }
