--- a/src/style/core/_variables.scss
+++ b/src/style/core/_variables.scss
@@ -16,3 +16,4 @@ $title: #141414;
 
 $font:        'Roboto', sans-serif;
 $font-title:  'Montserrat', sans-serif;
+$font-logo:   'Playfair Display', serif;
