--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -26,10 +26,8 @@ html(lang="ru")
     // end favicon block end
 
     //begin fonts
-    link(href="https://fonts.googleapis.com/css?family=Montserrat:600%7CRoboto:300,300i,400,500,700&display=swap&subset=cyrillic" rel="stylesheet")
-
+    link(href="https://fonts.googleapis.com/css?family=Montserrat:600%7CPlayfair+Display:700%7CRoboto:300,300i,400,500,700&display=swap&subset=cyrillic" rel="stylesheet")
     //end fonts
-
 
     link(rel='stylesheet' href='assets/css/foundation.css')
     link(rel='stylesheet' href='assets/css/app.css')
