did back2top button

--- a/src/style/sections/_footer.scss
+++ b/src/style/sections/_footer.scss
@@ -7,9 +7,9 @@
 }
 
 .footer-top {
-  padding-top: 43px;
   display: flex;
   justify-content: space-between;
+  padding-top: 43px;
   @include max(1220) {
     flex-wrap: wrap;
   }
@@ -18,97 +18,110 @@
 .footer-top__item {
   width: calc(17% - 28px);
   margin-bottom: 20px;
+
   @include max(1220) {
     width: 30%;
   }
+
   @include max(600) {
     width: 45%;
   }
+
   @include max(375) {
     width: 100%;
   }
 }
 
-.footer-top__logo{
-  color: #ffffff;
-  font-family:$font-logo;
+.footer-top__logo {
+  font-family: $font-logo;
   font-size: 20px;
-  text-decoration: none;
   display: block;
-  white-space: nowrap;
   margin-bottom: 27px;
+  white-space: nowrap;
+  text-decoration: none;
+  color: #fff;
 }
 
-.footer-top__logo-subtitle{
-  color: #99a1ba;
+.footer-top__logo-subtitle {
   font-size: 14px;
   line-height: 22px;
+  letter-spacing: .3px;
+  color: #99a1ba;
 }
-.footer-top__title{
-  color: #ffffff;
+
+.footer-top__title {
   font-size: 16px;
   font-weight: 500;
-  padding-top: 5px;
   display: block;
   margin-bottom: 20px;
+  padding-top: 5px;
+  color: #fff;
 }
-.footer-top__list{
+
+.footer-top__list {
   margin: 0;
   padding: 0;
 }
-.footer-top__list-item{
-  padding: 0;list-style: none;
+
+.footer-top__list-item {
+  padding: 0;
+  list-style: none;
 }
-.footer-top__list-link{
-  text-decoration: none;
+
+.footer-top__list-link {
   font-size: 14px;
   font-weight: 300;
   line-height: 34px;
+  text-decoration: none;
   color: #99a1ba;
   &:hover {
-  color: #ffffff;
+    color: #fff;
   }
 }
-.footer-top__adress{
-  color: #99a1ba;
-  text-decoration: none;
+
+.footer-top__adress {
   font-size: 14px;
   font-weight: 300;
   display: block;
   margin-bottom: 10px;
   padding-top: 10px;
-  letter-spacing:-.2px;
+  text-decoration: none;
+  letter-spacing: -.2px;
+  color: #99a1ba;
   &:hover {
-    color: #ffffff;
+    color: #fff;
   }
 }
-.footer-top__phone{
-  color: #ffffff;
+
+.footer-top__phone {
   font-size: 20px;
   font-weight: 400;
-  text-decoration: none;
   display: block;
+  text-decoration: none;
+  color: #fff;
 }
 
-.footer-top__social-list{
+.footer-top__social-list {
+  display: flex;
   margin: 15px 0 0 0;
   padding: 0;
-  display: flex;
 }
-.footer-top__social-item{
-  list-style: none;
-  flex: none;
-  padding: 0;
+
+.footer-top__social-item {
   display: block;
+  flex: none;
   margin-right: 20px;
-  &:last-child{
+  padding: 0;
+  list-style: none;
+  &:last-child {
     margin-right: 0;
   }
 }
+
 .footer-top__social-link {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 18px;
   &:hover {
     svg {
@@ -120,38 +133,34 @@
     transition: fill .5s;
   }
 }
-.footer-top__social-link--vk{
+
+.footer-top__social-link--vk {
   svg {
     width: 23px;
     height: 14px;
   }
 }
-.footer-top__social-link--fb{
+
+.footer-top__social-link--fb {
   svg {
     width: 11px;
     height: 18px;
   }
 }
-.footer-top__social-link--inst{
+
+.footer-top__social-link--inst {
   svg {
     width: 19px;
     height: 18px;
   }
 }
-.footer-top__social-link--youtube{
+
+.footer-top__social-link--youtube {
   svg {
     width: 20px;
     height: 14px;
   }
 }
-
-
-
-
-
-
-
-
 
 .footer-bottom {
   display: flex;
