--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -42,7 +42,7 @@ html(lang="ru")
   body
     block content
 
-
+    include elements/back2top
     script(src='assets/js/foundation.js')
     script(src='assets/js/app.js')
     script(src='assets/js/uncompressed.js')
