--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -5,6 +5,7 @@
 @import 'core/base';
 
 //elements
+@import 'elements/back2top';
 // @import 'elements/breadcrumbs';
 // @import 'elements/burger';
 // @import 'elements/pagination';
