--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -43,6 +43,4 @@ html(lang="ru")
     block content
 
     include elements/back2top
-    script(src='assets/js/foundation.js')
-    script(src='assets/js/app.js')
-    script(src='assets/js/uncompressed.js')
+    include sections/scripts
