--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,12 +6,13 @@
 
 //elements
 @import 'elements/back2top';
+@import 'elements/header-menu';
+@import 'elements/social-list';
+@import 'elements/burger';
 // @import 'elements/breadcrumbs';
-// @import 'elements/burger';
 // @import 'elements/pagination';
 //@import 'elements/popup';
 // @import 'elements/slickBase';
-// @import 'elements/stickyHeader';
 
 //section
 @import 'sections/footer';
