--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -164,6 +164,7 @@ ol > *:not(li) {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+  background-color: #396;
 
   //свойство для плавной прокрутки на яблоках
 
