--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -17,6 +17,7 @@
 //section
 @import 'sections/footer';
 @import 'sections/header';
+@import 'sections/profile-header';
 
 //pages
 @import 'pages/index';
