--- a/src/style/elements/_social-list.scss
+++ b/src/style/elements/_social-list.scss
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 .social-list__item {
   display: block;
   flex: none;
@@ -29,30 +30,23 @@
     transition: fill .5s;
   }
 }
-.social-list__link--vk {
-  svg {
-    width: 23px;
-    height: 14px;
-  }
+
+.social-list__link--vk svg {
+  width: 23px;
+  height: 14px;
 }
 
-.social-list__link--fb {
-  svg {
-    width: 11px;
-    height: 18px;
-  }
+.social-list__link--fb svg {
+  width: 11px;
+  height: 18px;
 }
 
-.social-list__link--inst {
-  svg {
-    width: 19px;
-    height: 18px;
-  }
+.social-list__link--inst svg {
+  width: 19px;
+  height: 18px;
 }
 
-.social-list__link--youtube {
-  svg {
-    width: 20px;
-    height: 14px;
-  }
+.social-list__link--youtube svg {
+  width: 20px;
+  height: 14px;
 }
