did profile top section

--- a/src/pug/pages/profile-6.pug
+++ b/src/pug/pages/profile-6.pug
@@ -4,7 +4,6 @@ block variables
   - var title       = 'Master Vision'
   - var description = 'Master Vision'
   - var ogtitle     = 'Master Vision'
-  - var ogimage     = 'assets/img/social.jpg'
 
 block content
   .main-wrap.profile-6
@@ -13,6 +12,7 @@ block content
     //begin content
     section.main
       include ../sections/profile-header
+      include ../sections/profile-top
     //end content
 
     include ../sections/footer
