--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -18,6 +18,7 @@
 @import 'sections/footer';
 @import 'sections/header';
 @import 'sections/profile-header';
+@import 'sections/profile-top';
 
 //pages
 @import 'pages/index';
