did profile counters

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -19,6 +19,7 @@
 @import 'sections/header';
 @import 'sections/profile-header';
 @import 'sections/profile-top';
+@import 'sections/profile-counters';
 
 //pages
 @import 'pages/index';
