--- a/src/pug/pages/profile-6.pug
+++ b/src/pug/pages/profile-6.pug
@@ -13,6 +13,7 @@ block content
     section.main
       include ../sections/profile-header
       include ../sections/profile-top
+      include ../sections/profile-counters
     //end content
 
     include ../sections/footer
