--- a/src/style/sections/_profile-top.scss
+++ b/src/style/sections/_profile-top.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   .container {
     display: flex;
-    min-height: 300px;
+    min-height: 330px;
 
     @include max(500) {
       flex-wrap: wrap;
@@ -25,7 +25,7 @@
     align-items: center;
   }
   @include max(680) {
-    flex: auto;
+    width: 160px;
   }
   @include max(500) {
     justify-content: flex-start;
