did articles body

--- a/src/pug/pages/profile-6.pug
+++ b/src/pug/pages/profile-6.pug
@@ -17,6 +17,7 @@ block content
       .profile-main
         .container
           include ../sections/profile-aside
+          include ../sections/profile-articles
     //end content
 
     include ../sections/footer
