--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -17,13 +17,15 @@
 //@import 'elements/popup';
 // @import 'elements/slickBase';
 
-//section
+//sections
 @import 'sections/footer';
 @import 'sections/header';
 @import 'sections/profile-header';
 @import 'sections/profile-top';
 @import 'sections/profile-counters';
 @import 'sections/profile-aside';
+@import 'sections/profile-articles';
+@import 'sections/profile-article';
 
 //pages
 @import 'pages/index';
