--- a/src/pug/sections/profile-articles.pug
+++ b/src/pug/sections/profile-articles.pug
@@ -1,6 +1,7 @@
 //begin profile-articles
 .profile-articles
   include profile-article-01
-  //include profile-article-02
-  //include profile-article-03
+  include profile-article-02
+  include profile-article-03
+  include profile-article-04
 //end profile-articles
