--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -26,6 +26,9 @@
 @import 'sections/profile-aside';
 @import 'sections/profile-articles';
 @import 'sections/profile-article';
+@import 'sections/profile-article-comments';
+@import 'sections/profile-article-footer';
+@import 'sections/profile-article-header';
 
 //pages
 @import 'pages/index';
