--- a/src/pug/sections/profile-article-04.pug
+++ b/src/pug/sections/profile-article-04.pug
@@ -1,19 +1,7 @@
-//begin profile-article-01
-.profile-article.profile-article-01
+//begin profile-article-04
+.profile-article.profile-article-04
   //begin profile-article__header
   header.profile-article__header
-    //begin header-row-main
-    .profile-article__header-row.profile-article__header-row--main
-      ul.profile-article__tabs-list
-        li.profile-article__tabs-item.active
-          a(href="#").profile-article__tabs-link Мой блог
-        li.profile-article__tabs-item
-          a(href="#").profile-article__tabs-link Черновики
-        li.profile-article__tabs-item
-          a(href="#").profile-article__tabs-link Избранное
-      button.profile-article__add-article Добавить запись
-    //end header-row-main
-
     //begin header-row-title
     .profile-article__header-row.profile-article__header-row--title
       h2.profile-article__title
@@ -41,9 +29,9 @@
 
   //begin profile-article__body
   .profile-article__body
-    .profile-article__body-text
-      p Включает в себя фундаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в естественных условиях, и практическую психологию, занимающуюся применением психологических знаний на практике.
-    a(href="#").profile-article__body-more Полный текст
+    a(href="assets/img/profile-article.jpg" data-fancybox="gallery").profile-article__body-img
+      img(src="assets/img/profile-article.jpg" alt="article")
+
     .profile-article__body-footer
       .profile-article__tags
         - var x = 3;
@@ -79,20 +67,11 @@
               path(fill='none', stroke='#4d4ce0', stroke-width='2', d='M11.992 0c6.623 0 11.992 4.658 11.992 10.405 0 5.746-5.369 10.405-11.992 ' +
               '10.405-.636 0-1.26-.044-1.87-.127C7.546 23.434 4.572 23.927 1.6 24v-.673c1.605-.84 2.898-2.37 ' +
               '2.898-4.118 0-.244-.018-.484-.05-.718C1.733 16.584 0 13.67 0 10.405 0 4.658 5.369 0 11.992 0z')
-          span.profile-article__icons-count 2
+          span.profile-article__icons-count 0
         //end profile-article__icon
       //end profile-article__icons
   //end profile-article__body
 
-  //begin profile-article__comments
-  .profile-article__comments
-    include profile-article-comment
-    include profile-article-comment-2
-    //-include profile-article-comment-3
-    //-include profile-article-comment-4
-    //-include profile-article-comment-5
-  //end profile-article__comments
-
   include profile-article-footer
 
-//end profile-article-01
+//end profile-article-04
