--- a/src/style/elements/_profile-aside-friends.scss
+++ b/src/style/elements/_profile-aside-friends.scss
@@ -1,3 +1,9 @@
+.profile-aside__friends {
+  @include max(950) {
+    display: none;
+  }
+}
+
 .profile-aside__friends-list {
   display: flex;
   flex-wrap: wrap;
@@ -43,4 +49,3 @@
   font-weight: 300;
   color: #1e1e1e;
 }
-
