did profile-6-open page

--- a/src/pug/sections/profile-top.pug
+++ b/src/pug/sections/profile-top.pug
@@ -25,7 +25,9 @@
         .profile-top__info-row
           span.profile-top__info-title День рождения:
           span.profile-top__info-info 19 января 1985
-        a(href="#").profile-top__show-more Показать подробную информацию
+        .profile-top__show-more
+          .profile-top__show-more-open Показать подробную информацию
+          .profile-top__show-more-close Скрыть подробную информацию
       //end profile-top__info
 
       //begin profile-top__status
