--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -12,10 +12,10 @@
 @import 'elements/profile-aside-menu';
 @import 'elements/profile-aside-progress';
 @import 'elements/profile-aside-friends';
-// @import 'elements/breadcrumbs';
-// @import 'elements/pagination';
+//@import 'elements/breadcrumbs';
+//@import 'elements/pagination';
 //@import 'elements/popup';
-// @import 'elements/slickBase';
+//@import 'elements/slickBase';
 
 //sections
 @import 'sections/footer';
@@ -29,6 +29,7 @@
 @import 'sections/profile-article-comments';
 @import 'sections/profile-article-footer';
 @import 'sections/profile-article-header';
+@import 'sections/profile-all-info';
 
 //pages
 @import 'pages/index';
