--- a/src/pug/sections/profile-articles.pug
+++ b/src/pug/sections/profile-articles.pug
@@ -1,5 +1,7 @@
 //begin profile-articles
 .profile-articles
+  include profile-all-info
+  include profile-counters
   include profile-article-01
   include profile-article-02
   include profile-article-03
