--- a/src/pug/sections/profile-article-02.pug
+++ b/src/pug/sections/profile-article-02.pug
@@ -79,6 +79,6 @@
     include profile-article-comment-2
   //end profile-article__comments
 
-  include profile-article-footer
+  include profile-article-footer-crop
 
 //end profile-article-02
