--- a/src/pug/sections/profile-article-footer.pug
+++ b/src/pug/sections/profile-article-footer.pug
@@ -15,13 +15,13 @@ footer.profile-article__footer
         +svg('decor-02')
       li.profile-article__form-decor-item.decor-03.double
         +svg('decor-03')
-      li.profile-article__form-decor-item.decor-04
+      //-li.profile-article__form-decor-item.decor-04
         +svg('decor-04')
-      li.profile-article__form-decor-item.decor-05
+      //-li.profile-article__form-decor-item.decor-05
         +svg('decor-05')
-      li.profile-article__form-decor-item.decor-06
+      //-li.profile-article__form-decor-item.decor-06
         +svg('decor-06')
-      li.profile-article__form-decor-item.decor-07.double
+      //-li.profile-article__form-decor-item.decor-07.double
         +svg('decor-07')
       li.profile-article__form-decor-item.decor-08
         +svg('decor-08')
@@ -31,15 +31,15 @@ footer.profile-article__footer
         +svg('decor-09')
         .profile-article__form-decor-arrow
           +svg('arr-down')
-      li.profile-article__form-decor-item.decor-10
+      //-li.profile-article__form-decor-item.decor-10
         +svg('decor-10')
-      li.profile-article__form-decor-item.decor-11.double
+      //-li.profile-article__form-decor-item.decor-11.double
         +svg('decor-11')
       li.profile-article__form-decor-item.decor-12
         +svg('decor-12')
         .profile-article__form-decor-arrow
           +svg('arr-down')
-      li.profile-article__form-decor-item.decor-13
+      //-li.profile-article__form-decor-item.decor-13
         +svg('decor-13')
         .profile-article__form-decor-arrow
           +svg('arr-down')
