--- a/src/pug/sections/profile-header.pug
+++ b/src/pug/sections/profile-header.pug
@@ -38,7 +38,7 @@
       .profile-header__user-body
         h3.profile-header__user-name Мария Иванова
         h4.profile-header__user-rait
-          span 10000
+          span 4 000
           =' '
           |баллов
         .profile-header__user-arrow
