--- a/src/style/sections/_footer.scss
+++ b/src/style/sections/_footer.scss
@@ -39,7 +39,7 @@
   text-decoration: none;
   color: #fff;
   &:hover {
-  color: #fff;
+    color: #fff;
   }
 }
 
@@ -100,6 +100,9 @@
   display: block;
   text-decoration: none;
   color: #fff;
+  &:hover {
+    color: #fff;
+  }
 }
 
 .footer-top__social-list {
