did profile-edit page

--- a/src/pug/elements/profile-aside-menu-edit.pug
+++ b/src/pug/elements/profile-aside-menu-edit.pug
@@ -11,9 +11,9 @@ mixin profile-aside__menu-item(svg, text, active)
 //begin profile-aside__menu
 nav.profile-aside__menu.aside-item
   ul.profile-aside__menu-list
-    +profile-aside__menu-item('friend', 'Друзья','')
-    +profile-aside__menu-item('invite', 'Пригласить друга', 'active')
-    +profile-aside__menu-item('messages', 'Сообщения','')
-    +profile-aside__menu-item('hat', 'Мои курсы','')
+    +profile-aside__menu-item('paper', 'Основная информация', 'active')
+    +profile-aside__menu-item('hat', 'Образование','')
+    +profile-aside__menu-item('lock', 'Личная информация','')
+    +profile-aside__menu-item('invite', 'Пригласить друга','')
     +profile-aside__menu-item('wallet', 'Мой счет','')
 //end profile-aside__menu
