--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -30,6 +30,7 @@
 @import 'sections/profile-article-footer';
 @import 'sections/profile-article-header';
 @import 'sections/profile-all-info';
+@import 'sections/profile-edit';
 
 //pages
 @import 'pages/index';
