--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -164,7 +164,6 @@ ol > *:not(li) {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
-
   //свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
@@ -189,12 +188,47 @@ ol > *:not(li) {
   @include max(1024) {
     padding: 0 30px;
   }
-
   @include max(768) {
     padding: 0 20px;
   }
-
   @include max(425) {
     padding: 0 10px;
+  }
+}
+
+.btn {
+  font-family: $font;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 36px;
+  display: inline-block;
+  max-width: 100%;
+  height: 36px;
+  padding: 0 20px;
+  cursor: pointer;
+  transition: all .5s;
+  text-align: center;
+  text-decoration: none;
+  color: #4d4ce0;
+  border: 1px solid $highlight-v;
+  border-radius: 18px !important;
+  box-shadow: none;
+}
+
+.btn--light {
+  color: $highlight-v;
+  background-color: transparent;
+  &:hover {
+    color: #fff;
+    background-color: $highlight-v;
+  }
+}
+
+.btn--dark {
+  color: #fff;
+  background-color: $highlight-v;
+  &:hover {
+    color: $highlight-v;
+    background-color: transparent;
   }
 }
