--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -164,10 +164,10 @@ ol > *:not(li) {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+
   //свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
-
   &.no-scroll {
     overflow: hidden;
   }
@@ -188,9 +188,11 @@ ol > *:not(li) {
   @include max(1024) {
     padding: 0 30px;
   }
+
   @include max(768) {
     padding: 0 20px;
   }
+
   @include max(425) {
     padding: 0 10px;
   }
@@ -229,6 +231,17 @@ ol > *:not(li) {
   background-color: $highlight-v;
   &:hover {
     color: $highlight-v;
+    background-color: transparent;
+  }
+}
+
+.btn--grey {
+  color: #fff;
+  border: 1px solid #99a1ba;
+  background-color: #99a1ba;
+  &:hover {
+    color: $highlight-v;
+    border: 1px solid $highlight-v;
     background-color: transparent;
   }
 }
